--- a/explore.html
+++ b/explore.html
@@ -134,7 +134,7 @@
 
                                             <div class="service h-100">
                                               <h5>Data Playbook, Module 2: Data Culture</h5>
-                                              <p>This module supports efforts to develop and support data-socialisation skills within groups.</p>
+                                              <p>This module supports efforts to develop and support data-socialization skills within groups.</p>
                                               <p><a href="https://www.preparecenter.org/content/data-culture-data-playbook-beta#overlay-context=content/data-essentials-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
                                             </div>
                                           </div>
@@ -147,19 +147,12 @@
                                             </div>
                                           </div>
 
-                                          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                            <div class="service_2 h-100">
-                                              <h5>Data Literacy (UNOCHA)</h5>
-                                              <p>Read about the benefits of data literacy and explore additional resources.</p>
-                                              <p><a href="https://www.mckinsey.com/business-functions/mckinsey-analytics/our-insights/why-data-culture-matters" class="readmore" target="_blank">Learn more</a></p>
-                                            </div>
-                                          </div>
 
                                           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
                                             <div class="service_2 h-100">
-                                              <h5>Why data culture matters (McKinsey)</h5>
-                                              <p>An article by McKinsey on why a data culture matters and seven principles to get there.</p>
-                                              <p><a href="https://www.mckinsey.com/business-functions/mckinsey-analytics/our-insights/why-data-culture-matters" class="readmore" target="_blank">Learn more</a></p>
+                                              <h5>Center for Humanitarian Data</h5>
+                                              <p>This site houses resources around data, data literacy, data policy, and predictive analytics.</p>
+                                              <p><a href="https://centre.humdata.org/" class="readmore" target="_blank">Learn more</a></p>
                                             </div>
                                           </div>
 
@@ -197,7 +190,7 @@
                                             <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
                                               <div class="service h-100">
                                                 <h5>Data Playbook, Module 8: Data Quality and Standards</h5>
-                                                <p>This module is for practioners who aim to improve data quality and advocate use of data standards.</p>
+                                                <p>This module is for practitioners who aim to improve data quality and advocate use of data standards.</p>
                                                 <p><a href="https://www.preparecenter.org/content/data-quality-and-standards-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
                                               </div>
                                             </div>
@@ -211,10 +204,26 @@
                                             </div>
 
                                             <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                                              <div class="service h-100">
+                                                <h5>Surge Information Management Support (SIMS)</h5>
+                                                <p>The SIMS site has a number of resources, templates, and toolkits for data in operations.</p>
+                                                <p><a href="http://rcrcsims.org/" class="readmore" target="_blank">Learn more</a></p>
+                                              </div>
+                                            </div>
+
+                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
                                               <div class="service_2 h-100">
-                                                <h5>Data Policy (UNOCHA)</h5>
-                                                <p>See UNOCHA's policy guidance on data responsiblity and data security, along with additional resources.</p>
-                                                <p><a href="https://centre.humdata.org/data-policy/" class="readmore" target="_blank">Learn more</a></p>
+                                                <h5>Humanitarian Data Exchange (HDX)</h5>
+                                                <p>HDX is an open platform for secondary datasets.</p>
+                                                <p><a href="https://data.humdata.org/" class="readmore" target="_blank">Learn more</a></p>
+                                              </div>
+                                            </div>
+
+                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                                              <div class="service_2 h-100">
+                                                <h5>UNHCR Coordination Toolkit</h5>
+                                                <p>This toolkit is a good resource for staff involved in information management.</p>
+                                                <p><a href="https://data.humdata.org/" class="readmore" target="_blank">Learn more</a></p>
                                               </div>
                                             </div>
 
@@ -245,7 +254,7 @@
                                             <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
 
                                               <div class="service h-100">
-                                                <h5>Data Playbook, Module 5: Data Vizualizations</h5>
+                                                <h5>Data Playbook, Module 5: Data Visualizations</h5>
                                                 <p>This module is for those that want to present data to others in compelling and convincing ways.</p>
                                                 <p><a href="https://www.preparecenter.org/content/data-visualizations-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
                                               </div>
@@ -256,6 +265,30 @@
                                                 <h5>Data Playbook, Module 3: Data Driven Projects</h5>
                                                 <p>The module guides users to think about all the steps in a whole data project rather than their respective field or sector.</p>
                                                 <p><a href="https://www.preparecenter.org/content/data-driven-projects-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
+                                              </div>
+                                            </div>
+
+                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                                              <div class="service_2 h-100">
+                                                <h5>ACAPS</h5>
+                                                <p>See ACAPS for analysis resources, including methodologies around surveying, data cleaning, and analysis.</p>
+                                                <p><a href="https://www.acaps.org/" class="readmore" target="_blank">Learn more</a></p>
+                                              </div>
+                                            </div>
+
+                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                                              <div class="service_2 h-100">
+                                                <h5>ALNAP</h5>
+                                                <p>Visit ALNAP for literature in the humanitarian assistance field, including papers on leadership, evidence, and lessons for response.</p>
+                                                <p><a href="https://www.alnap.org/" class="readmore" target="_blank">Learn more</a></p>
+                                              </div>
+                                            </div>
+
+                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                                              <div class="service_2 h-100">
+                                                <h5>World Bank</h5>
+                                                <p>The DIME Wiki from the World Bank is a resource to promote quality development research.</p>
+                                                <p><a href="https://dimewiki.worldbank.org/wiki/Main_Page" class="readmore" target="_blank">Learn more</a></p>
                                               </div>
                                             </div>
 
