Added links to new docs

--- a/assess.html
+++ b/assess.html
@@ -207,7 +207,7 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="learn.html">Learn</a></li>
-                                <li><a href="assess.html">Assess & plan</a></li>
+                                <li><a href="assess.html">Assess</a></li>
                                 <li><a href="explore.html">Explore resources</a></li>
                                 <li><a href="cases.html">Case studies</a></li>
                             </ul>
