--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="slider_text text-center justify-content-center">
                             <p>For the Red Cross and Red Crescent Movement</p>
                             <h3>A Data Readiness Toolkit</h3>
-                            <p>pre-alpha 1.0</p>
+                            <p>alpha 1.0</p>
 
                         </div>
                     </div>
@@ -108,7 +108,7 @@
   		<div class="container box_1170">
   			<h3 class="text-heading">An overview of data readiness</h3>
   			<p class="sample-text">
-          In the Red Cross Red Crescent Movement context, data readiness is the ability of National Societies to use quality and timely information to influence operations and planning to respond effectively to disasters.
+          In the Red Cross Red Crescent Movement context, data readiness is the ability of National Societies to use quality and timely information to influence humanitarian operations and programs.
   			</p>
   		</div>
   	</section>
@@ -117,8 +117,8 @@
       <div class="container box_1170">
         <h3 class="text-heading">Why it matters</h3>
         <p class="sample-text">
-          The IFRC and National Societies are thinking more critically about data and how they can leverage it better to improve our work. Through data readiness, organizations will be equipped
-          to use quality and timely information to influence operations and planning, all with the goal of improving our ability to respond effectively to disasters.
+          The IFRC and National Societies are thinking critically about data and how to leverage it better to improve our work.
+          Through data readiness, organizations will be better equipped to respond to, recover from, and prepare for disasters.
         </p>
 
       </div>
@@ -128,9 +128,7 @@
       <div class="container box_1170">
         <h3 class="text-heading">How to get there</h3>
         <p class="sample-text">
-          There are many paths to becoming a data ready organization, but this toolkit lays out an easy-to-follow roadmap for data readiness for IFRC and National Societies.
-          Whether you're learning about data readiness or the first time, developing a strategy for your team, or putting together a project proposal this toolkit can help you meet those goals.
-          Just follow the steps below and get started.
+          There are many paths to becoming a data ready organization, but this document lays out an easy-to-follow road map to data readiness. Whether you are learning about data readiness for the first time, developing a strategy for your team, or putting together a project proposal, follow the steps below and get started.
         </p>
       </div>
     </section>
@@ -146,7 +144,7 @@
                         </div>
                         <br>
                         <h4><a href="learn.html">Learn the basics</a></h4>
-                        <p>Learn more about data readiness and how it applies to our work in the humanitarian space.</p>
+                        <p>Learn more about data readiness and how it applies to humanitarian operations and programs.</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6">
@@ -155,8 +153,8 @@
                             <img src="img/steps/step2.png" alt="">
                         </div>
                         <br>
-                        <h4><a href="assess.html">Assess and plan</a></h4>
-                        <p>Assess your team using a data readiness maturity matrix and chart a way forward on your data readiness journey.</p>
+                        <h4><a href="assess.html">Assess your priorities</a></h4>
+                        <p>Using this assessment framework, you can identify where your team falls in terms of data readiness, learn what it means to increase your capacity in those domains, and identify where your team needs to improve.
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-6">
@@ -165,13 +163,38 @@
                             <img src="img/steps/step3.png" alt="">
                         </div>
                         <br>
-                        <h4><a href="explore.html">Explore resources</a></h4>
-                        <p>Explore resources from the IFRC, National Societies, and external sources to learn more about data readiness and try out tools.</p>
+                        <h4><a href="explore.html">Plan your learning experience</a></h4>
+                        <p>With your assessment and learnings, plan how your team will meet your data readiness goals. Use the resources here to get started.</p>
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    </section>
+    
+    <section class="sample-text-area">
+      <div class="container box_1170">
+        <h3 class="text-heading">Data Readiness One-pager</h3>
+        <p class="sample-text">
+          Need a short one-pager on the roadmap to data readiness? Print this.
+          <br><br>
+          <a href="docs/data readiness one-pager.pdf" class="genric-btn danger radius" target="_blank">Get One-pager</a>
+        </p><br>
+      </section>
+
+        <section class="sample-text-area">
+          <div class="container box_1170">
+            <h3 class="text-heading">Users' Guide to Data Readiness</h3>
+            <p class="sample-text">
+              This users' guide was written to help you in your journey. Use it as a reference to meet your data readiness goals.
+              <br><br>
+              <a href="https://docs.google.com/document/d/1JVjYJhxvTZyTjTsU4qYAVKrm7PRVEXkCTc3DvPdhrCo/edit?usp=sharing" class="genric-btn danger radius" target="_blank">Get Guide</a>
+            </p><br></section>
+
+
+      </div>
+    </section>
 
 
 
@@ -208,7 +231,7 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="learn.html">Learn</a></li>
-                                <li><a href="assess.html">Assess & plan</a></li>
+                                <li><a href="assess.html">Assess</a></li>
                                 <li><a href="explore.html">Explore resources</a></li>
                                 <li><a href="cases.html">Case studies</a></li>
                             </ul>
