New page and resources update

--- a/assess.html
+++ b/assess.html
@@ -66,7 +66,8 @@
                                             <ul id="navigation">
                                                 <li><a  href="index.html">Home</a></li>
                                                 <li><a  href="learn.html">Learn</a></li>
-                                                <li><a  href="assess.html">Assess & Plan</a></li>
+                                                <li><a  href="assess.html">Assess</a></li>
+                                                <li><a  href="plan.html">Plan</a></li>
                                                 <li><a  href="explore.html">Explore resources</a></li>
                                                 <li><a  href="cases.html">Case studies</a></li>
                                             </ul>
@@ -92,7 +93,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3>Assess & Plan</h3>
+                        <h3>Assess your priorities</h3>
                     </div>
                 </div>
             </div>
@@ -103,10 +104,10 @@
 
   	<section class="sample-text-area">
   		<div class="container box_1170">
-  			<h3 class="text-heading">Assess your team</h3>
+  			<h3 class="text-heading">Overview</h3>
   			<p class="sample-text">
-            The assessment and planning phase aims to help you move toward your data readiness goals. The data framework guides you through the main components
-            of data readiness in humanitarian response and programs alongside a maturity matrix. Using this resource, you can identify where your team
+            The assessment phase aims to help you identify your data readiness goals. The data framework guides you through the data readiness competencies
+            in humanitarian response and programs alongside a maturity matrix. Using this resource, you can identify where your team
             falls in terms of data readiness and learn what it means to increase your capacity in those domains.
 
         <br><br>
@@ -119,9 +120,10 @@
 
     <section class="sample-text-area">
   		<div class="container box_1170">
-  			<h3 class="text-heading">Using the framework</h3>
+  			<h3 class="text-heading">Recommended steps</h3>
   			<p class="sample-text">
-            <p> There is no "right" way to work through the framework. However, the following gives you the main steps to help you be successful in this journey.
+            <p> There is no "right" way to identify your teams' priorities. There are many consideraitons, including broader strategic initiatives,
+              project needs, time limitations, and funding opportunities. This section outlines the main steps to help you be successful in this journey.
               Read the descriptions and tips below as you work through the assessment and planning phase.
         <br><br>
 
@@ -131,11 +133,10 @@
   						<img src="img/use/10516-009-2.jpg" alt="" class="img-fluid-circle">
   					</div>
   					<div class="col-md-9 mt-sm-20">
-              <h4 class="mb-30">Identify your team</h3>
-                <p>Once you have a sense of what is in the framework, the next step is to identify your team. Who should be included as part of the assessment will depend on your goals, but generally,
-                you'll want to identify a project team or department.
+              <h4 class="mb-30">1. Select your team</h3>
+                <p>The first part of the assessment is to identify the appropriate people to be involved in this diagnostic. Who should be included as part of the assessment will depend on your goals, but generally, you'll want to identify a project team or department.</p>
 
-                <p>For example, you can identify a team working on a specific project (such as a community surveillance project) or a team/department that regularly works with data (such as the cash assistance team). Make sure you include people responsible for the different components in the data readiness framework.</p>
+                <p>For example, you can identify a team working on a specific project (such as a community surveillance project) or a team/department that regularly works with data (such as the PMER department).</p>
   					</div>
   				</div>
   			</div>
@@ -146,10 +147,9 @@
             <img src="img/use/12693-102-2.jpg" alt="" class="img-fluid-circle">
           </div>
           <div class="col-md-9 mt-sm-20">
-            <h4 class="mb-30">Reflect and score</h3>
-              <p>With your team, go through the framework and rate yourselves from 1 (does not exist) to 4 (high performance). Use the descriptions to rate yourselves as objectively as possible.
-                You may find belong in two categories; if this happens, choose the level that represents your team most of the time.</p>
-              <p> As you score yourselves, note why you chose that level. This can help you in the planning phase as you prioritize which areas to work on.</p>
+            <h4 class="mb-30">2. Assess your team</h3>
+              <p>With your team, go through the framework and rate yourselves from 1 (does not exist) to 4 (high performance). Use the descriptions to rate yourselves as objectively as possible. You may find you belong in two categories; if this happens, choose the level that represents your team most of the time.</p>
+              <p>As you score yourselves, note why you chose that level. This can help you in the planning phase as you prioritize which areas to work on.</p>
         </div>
       </div>
 
@@ -159,12 +159,10 @@
             <img src="img/use/12398-071-2.jpg" alt="" class="img-fluid-circle">
           </div>
           <div class="col-md-9 mt-sm-20">
-            <h4 class="mb-30">Review results and prioritize</h3>
-              <p> Review your results and identify which areas you want to focus on. This stage takes a bit of thought and creativity -- which components are essential
-                to your project and/or department? Where is there the most room for improvement? Some additional things you may want to consider are broader organizational strategy, funding opportunities,
-                time constraints, and how transferable the competencies are to other teams/departments.</p>
+            <h4 class="mb-30">3. Identify which competencies to prioritize</h3>
+              <p>Depending on the purpose of promoting data readiness, there may be critical competencies needed for a specific project or strategic initiative. Review your results and identify which areas you want to focus on.</p>
 
-              <p>If you need additional help getting started, consider focusing on the sample competencies in the learn page.</p>
+              <p>This stage takes a bit of thought and creativity -- which components are essential to your project and/or department? Where is there the most room for improvement? Some additional things you may want to consider are broader organizational strategy, funding opportunities, time constraints, and how transferable the competencies are to other teams/departments.</p>
 
           </div>
         </div>
@@ -206,8 +204,9 @@
                             </h3>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="learn.html">Learn</a></li>
-                                <li><a href="assess.html">Assess</a></li>
+                                <li><a href="learn.html">Learn the basics</a></li>
+                                <li><a href="assess.html">Assess your priorities</a></li>
+                                <li><a href="plan.html">Plan your learning experience</a></li>
                                 <li><a href="explore.html">Explore resources</a></li>
                                 <li><a href="cases.html">Case studies</a></li>
                             </ul>
