--- a/cases.html
+++ b/cases.html
@@ -65,7 +65,8 @@
                                             <ul id="navigation">
                                                 <li><a  href="index.html">Home</a></li>
                                                 <li><a  href="learn.html">Learn</a></li>
-                                                <li><a  href="assess.html">Assess & Plan</a></li>
+                                                <li><a  href="assess.html">Assess</a></li>
+                                                <li><a  href="plan.html">Plan</a></li>
                                                 <li><a  href="explore.html">Explore resources</a></li>
                                                 <li><a  href="cases.html">Case studies</a></li>
                                             </ul>
@@ -171,8 +172,9 @@
                             </h3>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="learn.html">Learn</a></li>
-                                <li><a href="assess.html">Assess</a></li>
+                                <li><a href="learn.html">Learn the basics</a></li>
+                                <li><a href="assess.html">Assess your priorities</a></li>
+                                <li><a href="plan.html">Plan your learning experience</a></li>
                                 <li><a href="explore.html">Explore resources</a></li>
                                 <li><a href="cases.html">Case studies</a></li>
                             </ul>
