--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                                         <ul id="navigation">
                                             <li><a  href="index.html">Home</a></li>
                                             <li><a  href="learn.html">Learn</a></li>
-                                            <li><a  href="assess.html">Assess & plan</a></li>
+                                            <li><a  href="assess.html">Assess</a></li>
+                                            <li><a  href="plan.html">Plan</a></li>
                                             <li><a  href="explore.html">Explore resources</a></li>
                                             <li><a  href="cases.html">Case studies</a></li>
                                         </ul>
@@ -172,7 +173,7 @@
         </div>
     </div>
     </section>
-    
+
     <section class="sample-text-area">
       <div class="container box_1170">
         <h3 class="text-heading">Data Readiness One-pager</h3>
@@ -232,6 +233,7 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="learn.html">Learn</a></li>
                                 <li><a href="assess.html">Assess</a></li>
+                                <li><a href="plan.html">Plan your learning experience</a></li>
                                 <li><a href="explore.html">Explore resources</a></li>
                                 <li><a href="cases.html">Case studies</a></li>
                             </ul>
