--- a/plan.html
+++ b/plan.html
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3>Learn the basics</h3>
+                        <h3>Plan your learning experience</h3>
                     </div>
                 </div>
             </div>
@@ -104,140 +104,36 @@
 
   	<section class="sample-text-area">
   		<div class="container box_1170">
-  			<h3 class="text-heading">Intro Video</h3>
+  			<h3 class="text-heading">Set your goals</h3>
   			<p class="sample-text">
-          Watch this presentation for a brief overview of data readiness.</p>
-
-          <video src="video/intro-2.mp4" width="480" controls>
-</video>
+          Now that you’ve considered your priorities from both a program and diagnostic perspective, the next step is to create a roadmap for the team. To do so, consider your prioritized competencies and you may want to focus on those rated lowest, aiming to move all competencies to a level 2 or 3.</p>
   		</div>
   	</section>
-
-  	<section class="sample-text-area">
-  		<div class="container box_1170">
-  			<h3 class="text-heading">An overview of data readiness</h3>
-  			<p class="sample-text">
-          In the Red Cross Red Crescent Movement context, data readiness is the ability of National Societies  to use quality and timely information to influence operations and planning to respond effectively to disasters.
-  			</p>
-        <p>Below describes the three main components of data readiness.</p>
-  		</div>
-  	</section>
-
-
-    <!-- service_area  -->
-    <div class="service_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-lg-4">
-                    <div class="single_service">
-                        <div class="thumb">
-                            <img src="img/components/dr-1.png" alt="">
-                        </div>
-                        <div class="service_info">
-                            <h4>Data Literacy</h4>
-                            <p>Data Literacy is the basic skills, knowledge, attitudes, and social structures required for different populations to use data.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <div class="single_service">
-                        <div class="thumb">
-                            <img src="img/components/dr-2.png" alt="">
-                        </div>
-                        <div class="service_info">
-                            <h4>Data Preparedness</h4>
-                            <p>Data Preparedness is the ability to responsibly and effectively deploy and manage data-related tools, methods, and strategies.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4">
-
-                    <div class="single_service">
-                        <div class="thumb">
-                            <img src="img/components/dr-3.png" alt="">
-                        </div>
-                        <div class="service_info">
-                            <h4>Data-driven decision making</h4>
-                            <p>Data-driven decision making is the ability to use data for humanitarian programs and operations, having reliably integrated data into both design and implementation.</p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <!--/ service_area  -->
 
     <section class="sample-text-area">
   		<div class="container box_1170">
-  			<h3 class="text-heading">Sample competencies</h3>
+  			<h3 class="text-heading">Review the learning objectives</h3>
   			<p class="sample-text">
-          To meet the main objectives under data readiness, there are a number of competencies a team needs to have.
-          These range everywhere from building a data culture, to having the right data collection tools, to making data-driven decisions.
-  			</p>
-        <p>Explore some of the different competencies below.</p>
+          Under each competency are several sub-competencies and indicators. These may also be considered the “learning objectives” as you create your roadmap. To be able to move up in your competency, all sub-competencies should be met. For example, if you want to prioritize “primary data collection,” you may want to move toward level 2 or 3 across all its sub-competencies.</p>
   		</div>
   	</section>
 
-    <div class="service_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="service_active owl-carousel">
-                        <div class="single_service">
-                            <div class="thumb_2">
-                                <img src="img/learn-svg/noun_Book_450657.svg" alt="">
-                            </div>
-                            <div class="service_info">
-                                <h4>Data literacy skills</h4>
-                                <p>Skills and capacity to collect, clean, store, and interpret.</p>
-                            </div>
-                        </div>
-                        <div class="single_service">
-                            <div class="thumb_2">
-                                <img src="img/learn-svg/noun_mobile phone_3031624.svg" alt="">
-                            </div>
-                            <div class="service_info">
-                                <h4>Data collection systems</h4>
-                                <p>Ability to collect information from individuals and groups, including surveys, procedures, and equipment.</p>
-                            </div>
-                        </div>
-                        <div class="single_service">
-                            <div class="thumb_2">
-                                <img src="img/learn-svg/noun_Data Sharing_332305.svg" alt="">
-                            </div>
-                            <div class="service_info">
-                                <h4>Data sharing</h4>
-                                <p>Having a system for active exchange of information, including: internally, between organizations, and in the public domain.</p>
-                            </div>
-                        </div>
-                        <div class="single_service">
-                            <div class="thumb_2">
-                                <img src="img/learn-svg/noun_data collection_2339813.svg" alt="">
-                            </div>
-                            <div class="service_info">
-                                <h4>Secondary data</h4>
-                                <p>The capacity to collect additional information needed for an operation (e.g. rapid assessments) to complement existing secondary data.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <section class="sample-text-area">
+  		<div class="container box_1170">
+  			<h3 class="text-heading">Write your curriculum</h3>
+  			<p class="sample-text">
+            The next step is to consider how your team will learn and practice the competencies. You will need to consider a number of factors (time, number of people, synchronous vs. asynchronous learning, remote vs. in-class sessions, etc.) to plan how your team will learn. In particular, consider, which resources, teaching tools, activities, and assessments you will need.</p>
+  		</div>
+  	</section>
 
     <section class="sample-text-area">
-      <div class="container box_1170">
-        <h3 class="text-heading">Theory of change</h3>
-        <p class="sample-text">
-          All the components and priority competencies are part of a broader Theory of Change (ToC) on data readiness for operations and planning.
-          If you're interested, go ahead and review the ToC. You can use it as a reference for learning, strategy development, proposal writing, or anything else.
-          <br><br>
-          <a href="docs/Data Readiness_ ToC 3.2.pdf" class="genric-btn danger radius" target="_blank">Go to ToC</a>
-        </p><br>
+  		<div class="container box_1170">
+  			<h3 class="text-heading">Find the resources you need</h3>
+  			<p class="sample-text">
+            There are plenty of existing resources on meeting the different data readiness competencies. As a starting point, the toolkit has already identified resources from the IFRC, National Societies, and outside organizations to help you get started in the resources tab.</p>
+  		</div>
+  	</section>
 
-      </div>
-    </section>
 
 
     <!-- footer start -->
