--- a/explore.html
+++ b/explore.html
@@ -65,7 +65,8 @@
                                             <ul id="navigation">
                                                 <li><a  href="index.html">Home</a></li>
                                                 <li><a  href="learn.html">Learn</a></li>
-                                                <li><a  href="assess.html">Assess & Plan</a></li>
+                                                <li><a  href="assess.html">Assess</a></li>
+                                                <li><a  href="plan.html">Plan</a></li>
                                                 <li><a  href="explore.html">Explore resources</a></li>
                                                 <li><a  href="cases.html">Case studies</a></li>
                                             </ul>
@@ -109,13 +110,13 @@
                                 <div class="nav nav-pills" id="v-pills-tab" role="tablist"
                                     aria-orientation="vertical">
                                     <a class=" active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
-                                        role="tab" aria-controls="v-pills-home" aria-selected="true">Data Literacy</a>
+                                        role="tab" aria-controls="v-pills-home" aria-selected="true">Key resources</a>
 
                                     <a class="" id="v-pills-preparedness-tab" data-toggle="pill" href="#v-pills-preparedness"
-                                        role="tab" aria-controls="v-pills-preparedness" aria-selected="false">Data Preparedness</a>
+                                        role="tab" aria-controls="v-pills-preparedness" aria-selected="false">Competencies</a>
 
                                         <a class="" id="v-pills-operational-tab" data-toggle="pill" href="#v-pills-operational"
-                                            role="tab" aria-controls="v-pills-preparedness" aria-selected="false">Operational IM</a>
+                                            role="tab" aria-controls="v-pills-preparedness" aria-selected="false">Planning</a>
 
                                     <a class="" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages"
                                         role="tab" aria-controls="v-pills-messages" aria-selected="false">FAQs</a>
@@ -128,13 +129,10 @@
                                 <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
                                     aria-labelledby="v-pills-home-tab">
                                     <div class="service_details_info">
-                                        <h1>Data Literacy</h1>
+                                        <h1>Key resources</h1>
                                         <br>
-                                        <h4>Working definition</h4>
-                                        <p>Data literacy includes the skills, knowledge, attitudes, and social structures required to use data.</p>
+                                        <p>See below for a curated list of websites housing data readiness learning content.</p>
                                         <br>
-
-                                <h4>Learn more and teach others</h4><br>
 
                                 <div class="site-section" id="what-we-do-section">
                                   <div class="container">
@@ -144,17 +142,17 @@
                                           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
 
                                             <div class="service h-100">
-                                              <h5>Data Playbook, Module 2: Data Culture</h5>
-                                              <p>This module supports efforts to develop and support data-socialization skills within groups.</p>
-                                              <p><a href="https://www.preparecenter.org/content/data-culture-data-playbook-beta#overlay-context=content/data-essentials-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
+                                              <h5>Data Playbook</h5>
+                                              <p>The Data Playbook Beta project is a prototype of social learning designed on modularized pick-and-choose model for 30 minute to 1 hour conversations or lunch and learns.</p>
+                                              <p><a href="https://www.preparecenter.org/toolkit/data-playbook-toolkit/" class="readmore" target="_blank">Learn more</a></p>
                                             </div>
                                           </div>
 
                                           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
                                             <div class="service h-100">
-                                              <h5>Data Playbook, Module 9: Data for Leadership</h5>
-                                              <p>This module supports data readiness in localization and decision-making.</p>
-                                              <p><a href="https://www.preparecenter.org/content/data-leadership-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
+                                              <h5>Surge Information Management Support (SIMS)</h5>
+                                              <p>The SIMS site has a number of resources, templates, and toolkits for data in operations.</p>
+                                              <p><a href="http://rcrcsims.org/" class="readmore" target="_blank">Learn more</a></p>
                                             </div>
                                           </div>
 
@@ -167,6 +165,23 @@
                                             </div>
                                           </div>
 
+                                          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                                            <div class="service_2 h-100">
+                                              <h5>ACAPS</h5>
+                                              <p>See ACAPS for analysis resources, including methodologies around surveying, data cleaning, and analysis.</p>
+                                              <p><a href="https://www.acaps.org/" class="readmore" target="_blank">Learn more</a></p>
+                                            </div>
+                                          </div>
+
+                                          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+                                            <div class="service_2 h-100">
+                                              <h5>ALNAP</h5>
+                                              <p>Visit ALNAP for literature in the humanitarian assistance field, including papers on leadership, evidence, and lessons for response.</p>
+                                              <p><a href="https://www.alnap.org/" class="readmore" target="_blank">Learn more</a></p>
+                                            </div>
+                                          </div>
+
+
                                         </div>
                                       </div>
                                     </div>
@@ -178,136 +193,28 @@
                                     <div class="tab-pane fade" id="v-pills-preparedness" role="tabpanel"
                                         aria-labelledby="v-pills-preparedness-tab">
                                         <div class="service_details_info">
-                                          <h1>Data Preparedness</h1>
+                                          <h1>Competencies</h1>
                                           <br>
-                                          <h4>Working definition</h4>
-                                          <p>Data preparedness is the ability to responsibly and effectively deploy and manage data collection and analysis tools, techniques, and strategies in a specific operational context before a disaster strikes.</p>
+                                          <p>See below for resources to help you build your data readiness competencies, by learning through online lessons or practice.</p>
                                           <br>
 
-                                  <h4>Learn more and teach others</h4><br>
+                                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTQcm2UmpahWIToOK62mYss9_sfYjIjUoY6aLTM7FOyLEO4BPpi1paEa1nnCu-q5ErLhT0Ipzm8iFA4/pubhtml?gid=865594864&amp;single=true&amp;widget=true&amp;headers=false"
+                                            width="100%" height=600px></iframe>
 
-                                  <div class="site-section" id="what-we-do-section">
-                                    <div class="container">
-                                      <div class="row">
-                                        <div class="col-lg-16 ml-auto">
-                                          <div class="row">
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                              <div class="service h-100">
-                                                <h5>Data Playbook, Module 4: Responsible Data</h5>
-                                                <p>This module aims to answer the question: How can we protect and use data responsibly?</p>
-                                                <p><a href="https://www.preparecenter.org/content/responsible-data-data-playbook-beta#overlay-context=content/data-visualizations-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                              <div class="service h-100">
-                                                <h5>Data Playbook, Module 8: Data Quality and Standards</h5>
-                                                <p>This module is for practitioners who aim to improve data quality and advocate use of data standards.</p>
-                                                <p><a href="https://www.preparecenter.org/content/data-quality-and-standards-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                              <div class="service h-100">
-                                                <h5>Data Playbook, Module 7: Data Sharing</h5>
-                                                <p>This module is for anyone who is involved in a data-driven project and wants to understand how to share data.</p>
-                                                <p><a href="https://www.preparecenter.org/content/data-sharing-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                              <div class="service h-100">
-                                                <h5>Surge Information Management Support (SIMS)</h5>
-                                                <p>The SIMS site has a number of resources, templates, and toolkits for data in operations.</p>
-                                                <p><a href="http://rcrcsims.org/" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                              <div class="service_2 h-100">
-                                                <h5>Humanitarian Data Exchange (HDX)</h5>
-                                                <p>HDX is an open platform for secondary datasets.</p>
-                                                <p><a href="https://data.humdata.org/" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                              <div class="service_2 h-100">
-                                                <h5>UNHCR Coordination Toolkit</h5>
-                                                <p>This toolkit is a good resource for staff involved in information management.</p>
-                                                <p><a href="https://data.humdata.org/" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-
-                                          </div>
                                         </div>
-                                      </div>
                                     </div>
-                                  </div>
-                                </div>
-                            </div>
 
                                     <div class="tab-pane fade" id="v-pills-operational" role="tabpanel"
                                         aria-labelledby="v-pills-operational-tab">
                                         <div class="service_details_info">
-                                          <h1>Operational IM</h1>
+                                          <h1>Planning</h1>
                                           <br>
-                                          <h4>Working definition</h4>
-                                          <p>Operational IM is being in a position to use data for response operation decisions and have reliably integrated data use into both design and implementation.</p>
+                                          <p>See below for resources to help you build you plan your learning experience, including references on facilitation and agenda setting.</p>
                                           <br>
 
-                                  <h4>Learn more and teach others</h4><br>
+                                          <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTQcm2UmpahWIToOK62mYss9_sfYjIjUoY6aLTM7FOyLEO4BPpi1paEa1nnCu-q5ErLhT0Ipzm8iFA4/pubhtml?gid=1927967553&amp;single=true&amp;widget=true&amp;headers=false"
+                                          width="100%" height=600px>></iframe>
 
-                                  <div class="site-section" id="what-we-do-section">
-                                    <div class="container">
-                                      <div class="row">
-                                        <div class="col-lg-16 ml-auto">
-                                          <div class="row">
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-
-                                              <div class="service h-100">
-                                                <h5>Data Playbook, Module 5: Data Visualizations</h5>
-                                                <p>This module is for those that want to present data to others in compelling and convincing ways.</p>
-                                                <p><a href="https://www.preparecenter.org/content/data-visualizations-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                              <div class="service h-100">
-                                                <h5>Data Playbook, Module 3: Data Driven Projects</h5>
-                                                <p>The module guides users to think about all the steps in a whole data project rather than their respective field or sector.</p>
-                                                <p><a href="https://www.preparecenter.org/content/data-driven-projects-data-playbook-beta" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                              <div class="service_2 h-100">
-                                                <h5>ACAPS</h5>
-                                                <p>See ACAPS for analysis resources, including methodologies around surveying, data cleaning, and analysis.</p>
-                                                <p><a href="https://www.acaps.org/" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                              <div class="service_2 h-100">
-                                                <h5>ALNAP</h5>
-                                                <p>Visit ALNAP for literature in the humanitarian assistance field, including papers on leadership, evidence, and lessons for response.</p>
-                                                <p><a href="https://www.alnap.org/" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-
-                                            <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-                                              <div class="service_2 h-100">
-                                                <h5>World Bank</h5>
-                                                <p>The DIME Wiki from the World Bank is a resource to promote quality development research.</p>
-                                                <p><a href="https://dimewiki.worldbank.org/wiki/Main_Page" class="readmore" target="_blank">Learn more</a></p>
-                                              </div>
-                                            </div>
-
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
                                 </div>
                             </div>
 
@@ -420,8 +327,9 @@
                             </h3>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="learn.html">Learn</a></li>
-                                <li><a href="assess.html">Assess</a></li>
+                                <li><a href="learn.html">Learn the basics</a></li>
+                                <li><a href="assess.html">Assess your priorities</a></li>
+                                <li><a href="plan.html">Plan your learning experience</a></li>
                                 <li><a href="explore.html">Explore resources</a></li>
                                 <li><a href="cases.html">Case studies</a></li>
                             </ul>
